Bug 1375460 - "haspopup" AtkObject attribute missing if multiprocess enabled. r=surkov

Move the object attribute exposure of states::HASPOPUP from the ATK wrapper
code to the shared accessibility code. Call UniversalStatesFor() rather than
State() for performance.